Update: .gitignore, README.md, app/css/styles_main.css, app/pages/help.html, app/pages/tutorial.html, index.html

--- a/app/pages/help.html
+++ b/app/pages/help.html
@@ -13,25 +13,15 @@
       Android) on your phone.
     </li>
     <li>Connect your phone and computer to the same Wi-Fi network.</li>
-    <li>
-      Start the IP camera app and note the stream URL (e.g.,
-      <code>http://192.168.1.100:8080</code>).
-    </li>
-    <li>
-      In OpenLens, select <b>IP Camera</b> and enter the URL (use
-      <code>/shot.jpg</code> for snapshots or <code>/video</code> for MJPEG
-      stream).
-    </li>
-    <li>Click <b>Start</b> to view and analyze the stream.</li>
+    <li>Start the IP camera app and note the stream URL.</li>
+    <li>In OpenLens, select <b>IP Camera</b> and enter the URL.</li>
+    <li>Click <b>Start</b> to run the stream.</li>
   </ol>
   <hr />
 
   <h3>Voice Commands</h3>
   <ul>
-    <li>
-      Use <b>"Microphone"</b> button to activate voice commands (e.g., "capture
-      image", "pause video").
-    </li>
+    <li>Turn on <b>"Voice Command"</b> to activate voice commands.</li>
     <li>
       Supported commands: "capture image", "pause video", "resume video", "save
       video", "record video", etc.
@@ -56,11 +46,11 @@
   <ul>
     <li>
       <b>Camera not detected:</b> Ensure permissions are granted for supported
-      browsers (Chrome, Edge, or Safari).
+      browsers.
     </li>
     <li>
-      <b>IP Camera not working:</b> Double-check the URL, network connection,
-      and IP camera app is running on your phone.
+      <b>IP Camera not working:</b> Verify URL, network connection, and IP
+      camera app is running on your phone.
     </li>
     <li>
       <b>Voice commands not working:</b> Make sure your microphone is enabled
