--- a/app/pages/tutorial.html
+++ b/app/pages/tutorial.html
@@ -8,15 +8,15 @@
     <li>
       <b>Start Web App:</b>
       <ul>
-        <li>Navigate to the directory <code>app/web</code>.</li>
+        <li>Go to <code>OpenLens</code> directory.</li>
         <li>
           Run a local server:
-          <code>python -m http.server 8000</code>.
+          <code>node app/backend/server.js</code>.
         </li>
         <li>
-          Open App in your browser:
-          <code>http://localhost:8000/</code> or
-          <code>http://&lt;ip-address&gt;:8000/</code> on your network.
+          Open in browser:
+          <code>http://localhost:5500/</code> or
+          <code>http://&lt;ip-address&gt;:5500/</code>
         </li>
       </ul>
     </li>
@@ -26,8 +26,8 @@
         <li><b>Camera (default):</b> Uses your device's built-in webcam.</li>
         <li><b>USB Camera:</b> Uses an external USB camera.</li>
         <li>
-          <b>IP Camera:</b> Enter the URL of an IP camera (e.g., from an IP
-          camera app running on a mobile phone).
+          <b>IP Camera:</b> Enter the URL of an IP camera (e.g., an IP camera
+          app running on a mobile phone).
         </li>
         <li><b>Video File:</b> Upload a video file for detection.</li>
       </ul>
