--- a/index.html
+++ b/index.html
@@ -207,17 +207,18 @@
     <div class="footer">
       <!-- &copy; 2025 OpenLens | Real-Time Object Detection with Voice Commands -->
       <p>
-        &copy; 2025
-
-        <a
+        &copy; 2025 OpenLens
+        | All Rights Reserved
+        <!-- <a
           class="btn-link fw-bold"
           href="https://ocr-tech.github.io/OpenLens/"
           target="_blank"
           style="text-decoration: none; color: inherit"
           >OpenLens</a
         >
-        | Real-Time Object Detection
+        | Real-Time Object Detection -->
       </p>
+
     </div>
 
     <!-- Add JavaScript files -->
