Update: app/js/detect_object.js, app/js/detect_text.js, app/js/include_html.js, app/js/init_system.js, app/js/mode.js, app/js/script_coco_ssd.js, app/js/script_tesseract.js, app/js/script_tf_min.js, app/js/setting.js, app/js/setting_alert_email.js, app/js/setting_alert_line.js, app/js/setting_alert_sms.js, app/js/setting_notification.js, app/pages/mode.html, app/pages/settings.html, index.html, resources/video/video6.mp4

--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -73,15 +73,6 @@
           </label>
         </div>
 
-        <!-- Mode Settings -->
-        <div class="settings-row">
-          <label for="mode-switch">Mode</label>
-          <label class="switch">
-            <input type="checkbox" id="mode-switch" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
         <!-- Counting Objects Settings -->
         <div class="settings-row">
           <label for="counting-objects">Counting Objects</label>
@@ -203,6 +194,49 @@
             <input type="checkbox" id="history-switch" />
             <span class="slider"></span>
           </label>
+        </div>
+
+        <canvas
+          id="ocr-canvas"
+          style="position: absolute; left: 0; top: 0; z-index: 10"
+        ></canvas>
+
+        <!-- Text Detection Settings -->
+        <div class="settings-row">
+          <label for="text-detection" title="Detects text in video."
+            >Text Detection</label
+          >
+          <label class="switch">
+            <input
+              type="checkbox"
+              id="text-switch"
+              onclick="toggleTextDetection()"
+            />
+            <span class="slider"></span>
+          </label>
+          <input
+            type="range"
+            id="text-sensitivity-slider"
+            min="1"
+            max="10"
+            value="5"
+            disabled="true"
+            oninput="updateValueText(this.value)"
+          />
+          <ul
+            style="
+              display: flex;
+              gap: 8px;
+              align-items: center;
+              margin: 0;
+              padding: 0;
+              list-style: none;
+            "
+          >
+            <li class="status normal"></li>
+            <li class="status warn"></li>
+            <li class="status alert"></li>
+          </ul>
         </div>
 
         <!-- Motion Detection Settings -->
