--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
     <script src="app/js/main_help.js"></script>
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
+    <script src="app/js/detect_motion.js"></script>
+    <script src="app/js/detect_sound.js"></script>
+    <script src="app/js/detect_fire.js"></script>
     <script src="app/js/setting_alert_sms.js"></script>
     <script src="app/js/setting_alert_email.js"></script>
     <script src="app/js/setting_alert_line.js"></script>
@@ -281,10 +284,6 @@
     <script src="app/js/setting_dis_location.js"></script>
     <script src="app/js/setting_dis_vidsize.js"></script>
     <script src="app/js/setting_dis_framerate.js"></script>
-    <script src="app/js/setting_det_motion.js"></script>
-    <script src="app/js/setting_det_sound.js"></script>
-    <script src="app/js/setting_det_fire.js"></script>
-    <script src="app/js/setting_ocr.js"></script>
     <script src="app/js/main_start.js"></script>
     <script src="app/js/main_stop.js"></script>
     <script src="app/js/main_start_cam.js"></script>
