Update: index.html

--- a/index.html
+++ b/index.html
@@ -98,12 +98,18 @@
       </div>
 
       <!-- MJPEG/HTTPS stream -->
-      <!-- <img
+      <img
         id="ipcam-feed-img"
         src="https://192.168.245.139:5500/video"
         alt="IP Camera Feed"
-        style="width: 100%; max-width: 200px; height: auto; display: block; margin: 0 auto;"
-      /> -->
+        style="
+          width: 100%;
+          max-width: 200px;
+          height: auto;
+          display: block;
+          margin: 0 auto;
+        "
+      />
 
       <!-- <video id="ipcam-feed-video" controls autoplay>
         <source src="https://192.168.245.139:5500/" type="video/mp4" />
