Update: index.html

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
         "
       />
 
-      <!-- <video id="ipcam-feed-video" controls autoplay>
+      <video id="ipcam-feed-video" controls autoplay>
         <source src="https://192.168.245.139:5500/" type="video/mp4" />
         Your browser does not support MP4 video.
-      </video> -->
+      </video>
 
       <div class="controls-section">
         <button
