Update: app/js/detect_flood.js, app/js/detect_object.js, app/js/include_html.js, app/js/init_system.js, app/pages/detect.html, app/pages/source.html, index.html

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <script src="app/js/detect_sound.js"></script>
     <script src="app/js/detect_smoke.js"></script>
     <script src="app/js/detect_fire.js"></script>
+    <script src="app/js/detect_flood.js"></script>
     <script src="app/js/setting_alert_sms.js"></script>
     <script src="app/js/setting_alert_email.js"></script>
     <script src="app/js/setting_alert_line.js"></script>
