--- a/app/pages/detect.html
+++ b/app/pages/detect.html
@@ -152,7 +152,7 @@
           ></div>
         </div>
 
-        <!-- Flood Detection Settings -->
+        <!-- Motion Detection Settings -->
         <div class="settings-row">
           <label for="flood-detection" title="Detects flooding."
             >Flood Detection</label
@@ -174,6 +174,23 @@
             disabled="true"
             oninput="updateValueFlood(this.value)"
           />
+          <span id="flood-sensitivity-value">5</span>
+
+          <div
+            class="status-color normal"
+            id="flood-status-normal"
+            title="Normal"
+          ></div>
+          <div
+            class="status-color warn"
+            id="flood-status-warn"
+            title="Warning"
+          ></div>
+          <div
+            class="status-color alert"
+            id="flood-status-alert"
+            title="Alert"
+          ></div>
         </div>
 
         <!-- Light Detection Settings -->
