--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -6,10 +6,10 @@
         <select id="video-source" disabled="true">
           <!-- <option value="camera" selected>Camera (default)</option> -->
           <option value="camera">Camera (default)</option>
-          <option value="camera_usb" selected>USB Camera (external)</option>
+          <option value="camera_usb">USB Camera (external)</option>
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
-          <option value="video">Video (file)</option>
+          <option value="video" selected>Video (file)</option>
         </select>
       </label>
 
