--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
     <script src="app/js/detect_smoke.js"></script>
     <script src="app/js/detect_fire.js"></script>
     <script src="app/js/detect_flood.js"></script>
+    <script src="app/js/detect_light.js"></script>
     <script src="app/js/setting_alert_sms.js"></script>
     <script src="app/js/setting_alert_email.js"></script>
     <script src="app/js/setting_alert_line.js"></script>
