--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
     <script src="app/js/detect_fire.js"></script>
     <script src="app/js/detect_flood.js"></script>
     <script src="app/js/detect_light.js"></script>
+    <script src="app/js/detect_rain.js"></script>
+    <script src="app/js/detect_fall.js"></script>
+    <script src="app/js/detect_break.js"></script>
     <script src="app/js/setting_alert_sms.js"></script>
     <script src="app/js/setting_alert_email.js"></script>
     <script src="app/js/setting_alert_line.js"></script>
